# tap-iterable-v2

./: README.md  meltano.yml  pyproject.toml  tox.ini
tap_iterable/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_iterable/schemas/: campaigns.json  channels.json  email_templates.json  list_users.json  lists.json  message_types.json  metadata.json  users.json
tests/: __init__.py  test_core.py
